force-app/main/default/src/objects/Lead_Update_MVN__e/Lead_Update_MVN__e.object-meta.xml
<CustomObject>
    <label>Lead Update</label>
    <pluralLabel>Lead Updates</pluralLabel>
</CustomObject>