force-app/main/default/src/objects/Lead_Update_MVN__e/fields/BirthDate_MVN__c.field-meta.xml
<CustomField>
    <fullName>BirthDate_MVN__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>