force-app/main/default/src/objects/Lead_Update_MVN__e/fields/Consumer_MVN__c.field-meta.xml
<CustomField>
    <fullName>Consumer_MVN__c</fullName>
    <label>Consumer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>