force-app/main/default/src/objects/Lead_Update_MVN__e/fields/FirstName_MVN__c.field-meta.xml
<CustomField>
    <fullName>FirstName_MVN__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>