force-app/main/default/src/objects/Lead_Update_MVN__e/fields/Gender_MVN__c.field-meta.xml
<CustomField>
    <fullName>Gender_MVN__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>