force-app/main/default/src/objects/Lead_Update_MVN__e/fields/LastName_MVN__c.field-meta.xml
<CustomField>
    <fullName>LastName_MVN__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>