force-app/main/default/src/objects/Lead_Update_MVN__e/fields/Process_Template_MVN__c.field-meta.xml
<CustomField>
    <fullName>Process_Template_MVN__c</fullName>
    <label>Process Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>